first commit hmtl ready

--- a/src/index.html
+++ b/src/index.html
@@ -9,5 +9,29 @@
 
 <body>
   <script src="index.js" type="module"></script>
+  <header>
+    <h1 >Analizador de texto</h1>
+   
+    <!-- pantalla principal-->
+<h2> <em>El analizador de texto es una herramienta en línea para el análisis de texto completo. Como palabras, letras, numeros, espacios, longitud...</h2></em>
+
+<!-- cuadro de texto-->
+<label> Escribe aqui:</label>
+<textarea name= "textarea"> </textarea>
+<ul>
+    <li>Recuento de palabras</li>
+    <li>Recuento de caracteres</li>
+    <li>Recuento de caracteres excluyendo espacios y signos de puntuación</li>
+    <li>Recuento de números</li>
+    <li>Suma total de números</li>
+    <li>Longitud media de las palabras</li>
+</ul>
+
+<button id:clean>limpiar</button>
+<footer>
+    <p>jp</p>
+</footer>
+</header>
+
 </body>
 </html>
